sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:11: error: not found: value j
  setValue(j+1,x)
           ^AlgInsertionSort:11: error: not found: value x
  setValue(j+1,x)
               ^